// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyComponent should be possible to activate button 2 with Spacebar 1`] = `
<MyComponent>
  <div>
    <h2>
      MyComponent
    </h2>
    <button
      id="my-button-one"
    >
      button
    </button>
    <span>
      fart
    </span>
    <button
      id="my-button-two"
    >
      button
    </button>
  </div>
</MyComponent>
`;

exports[`MyComponent should be possible to activate button with Spacebar 1`] = `
<MyComponent>
  <div>
    <h2>
      MyComponent
    </h2>
    <button
      id="my-button-one"
    >
      button
    </button>
    <span>
      fart
    </span>
    <button
      id="my-button-two"
    >
      button
    </button>
  </div>
</MyComponent>
`;

exports[`MyComponent should render banner text correctly with given strings 1`] = `
<div>
  <h2>
    MyComponent
  </h2>
  <button
    id="my-button-one"
  >
    button
  </button>
  <span>
    fart
  </span>
  <button
    id="my-button-two"
  >
    button
  </button>
</div>
`;

exports[`MyComponent should render correctly in "debug" mode 1`] = `
<div>
  <h2>
    MyComponent
  </h2>
  <button
    id="my-button-one"
  >
    button
  </button>
  <span>
    fart
  </span>
  <button
    id="my-button-two"
  >
    button
  </button>
</div>
`;

exports[`MyComponent should render correctly with no props 1`] = `
<div>
  <h2>
    MyComponent
  </h2>
  <button
    id="my-button-one"
  >
    button
  </button>
  <span>
    fart
  </span>
  <button
    id="my-button-two"
  >
    button
  </button>
</div>
`;
